[workspace]
resolver = "2"
members = [
    "p3-standalone",
    "jito-protos",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/paladin-bladesmith/p3-standalone.git"
edition = "2021"

[workspace.dependencies]
jito-protos = { path = "jito-protos"}
paladin-lockup-program = { path = "paladin-programs/lockup/program" }
bytes = "1.10"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
tonic = "0.9.2"
tonic-build = "0.9.2"
borsh = "1.5.1"
bytemuck = "1.16.1"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.203"
serde_with = "2.3.3"
shank = "0.4.2"
solana-program = "2.0.19"
solana-program-test = "2.0.19"
solana-sdk = "2.0.19"
spl-associated-token-account = "=4.0.0"
spl-discriminator = "=0.4.1"
spl-token-2022 = "=4.0.0"
rand = "0.8.5"
test-case = "3.3.1"
thiserror = "1.0.61"
