[package]
name = "p3-standalone"
version = "0.1.0"
repository = "https://github.com/paladin-bladesmith/p3-standalone.git"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bytemuck = "1.23.0"
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.5.54"
crossbeam-channel = "0.5.15"
dashmap = "5.5.3"
dotenvy = "0.15.7"
ed25519-dalek = "=1.0.1"
hostname = "0.3.1"
jito-protos = { workspace = true }
jwt = { version = "0.16.0", features = ["openssl"] }
keyed_priority_queue = "0.4.1"
log = "0.4.27"
openssl = "0.10"
paladin-lockup-program = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
solana-account = "2.2.1"
solana-client = { git = "https://github.com/paladin-bladesmith/paladin-solana", branch = "art3mix/remove-sdk" }
solana-metrics = { git = "https://github.com/paladin-bladesmith/paladin-solana", branch = "art3mix/remove-sdk" }
solana-perf = { git = "https://github.com/paladin-bladesmith/paladin-solana", branch = "art3mix/remove-sdk" }
solana-poh = { git = "https://github.com/paladin-bladesmith/paladin-solana", branch = "art3mix/remove-sdk" }
solana-pubkey = "2.4.0"
solana-sdk = "2.2.1"
solana-streamer = { git = "https://github.com/paladin-bladesmith/paladin-solana", branch = "art3mix/remove-sdk" }
spl-discriminator = "=0.3.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
tonic = {workspace = true}
toolbox = { git = "https://github.com/OliverNChalk/toolbox-rs.git", version = "0.2.0", features = ["tracing","version"] }
tracing = "0.1.41"


[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["rustc", "cargo"] }
